[package]
name = "nullping-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
env_logger = "0.11.8"
log = "0.4.29"
native-tls = "0.2.14"
prettytable = "0.10.0"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
